--- a/index.html
+++ b/index.html
@@ -6,46 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <link rel="stylesheet" href="index.css" />
-  <body>
-    <!-- admin create account -->
-    <div class="auth">
-      <div class="auth-form__header">
-        <h3 class="auth-form__feading">Register</h3>
-        <span class="auth-form__swtch_button">Login</span>
-      </div>
-
-      <div class="auth-form__form">
-        <div class="auth-form__group">
-          <input type="text" class="auth-form__input" placeholder="User name" />
-        </div>
-        <div class="auth-form__group">
-          <input
-            type="password"
-            class="auth-form__input"
-            placeholder="Password"
-          />
-        </div>
-        <div class="auth-form__group">
-          <input
-            type="password"
-            class="auth-form__input"
-            placeholder="Confirm Password"
-          />
-        </div>
-      </div>
-      <div class="auth-form__aside">
-        <p class="auth-form__policy-text">
-          agree to <a href="" class="auth-form__policy-link">Terms</a> and
-          <a href="" class="auth-form__policy-link">Conditions</a>
-        </p>
-      </div>
-
-      <div class="auth-form__controls">
-        <button class="btn">Back</button>
-        <button class="btn">Register</button>
-      </div>
-      <a href="" class=""><i class="fa-solid fa-house"></i> facebook</a>
-    </div>
-  </body>
+  <link rel="stylesheet" href="assets/css/base.css" />
+  <link rel="stylesheet" href="ssets/css/main.css" />
+  <body></body>
 </html>
