--- a/index.html
+++ b/index.html
@@ -6,7 +6,162 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
+  <script type="text/javascript">
+    var clicks = 0;
+
+    function Add() {
+      clicks += 1;
+      document.getElementById("clicks").innerHTML = clicks;
+    }
+    function Substract() {
+      if (clicks > 0) {
+        clicks -= 1;
+        document.getElementById("clicks").innerHTML = clicks;
+      }
+    }
+
+    function Add() {
+      clicks += 1;
+      document.getElementById("clickss").innerHTML = clicks;
+    }
+    function Substract() {
+      if (clicks > 0) {
+        clicks -= 1;
+        document.getElementById("clickss").innerHTML = clicks;
+      }
+    }
+  </script>
+
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+  />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css.map"
+  />
   <link rel="stylesheet" href="assets/css/base.css" />
-  <link rel="stylesheet" href="ssets/css/main.css" />
-  <body></body>
+  <link rel="stylesheet" href="assets/css/main.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    rel="stylesheet"
+  />
+  <body>
+    <div class="main">
+      <header class="header">
+        <div class="logo"></div>
+        <div class="avt">
+          <img
+            class="avt-img"
+            src="https://scontent.fhan2-3.fna.fbcdn.net/v/t39.30808-6/317954712_702291161247055_7700937006797325992_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=N6d8x1zbiyEAX_szj6V&_nc_ht=scontent.fhan2-3.fna&oh=00_AfDfahKXKkwiWHl_2xSDt3dPReJ9w6EB3DSEJN1bXW4JNQ&oe=63F26435"
+            alt=""
+          />
+          <div class="dropdown">
+            <!-- <h1 class="avt-name">Duong</h1> -->
+            <button
+              class="btn dropdown-toggle"
+              type="button"
+              data-toggle="dropdown"
+            >
+              Duong <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a
+                  href="http://127.0.0.1:5500/Login.html?username=asdasdasd&password=asdasd#"
+                  >Logout</a
+                >
+              </li>
+              <li><a href="#">login</a></li>
+              <li><a href="#">View </a></li>
+            </ul>
+          </div>
+        </div>
+      </header>
+      <h1 class="title">Cordinator Homepage</h1>
+      <div class="container">
+        <div class="famous-idea-all">
+          <div class="famous-idea">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              assumenda minus similique eligendi ipsam repellat, dolore
+              repudiandae illum fugiat tenetur deserunt nihil a tempora ipsa,
+              iste omnis corrupti voluptatum velit!
+            </p>
+          </div>
+
+          <div class="famous-idea">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              assumenda minus similique eligendi ipsam repellat, dolore
+              repudiandae illum fugiat tenetur deserunt nihil a tempora ipsa,
+              iste omnis corrupti voluptatum velit!
+            </p>
+          </div>
+          <div class="famous-idea">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              assumenda minus similique eligendi ipsam repellat, dolore
+              repudiandae illum fugiat tenetur deserunt nihil a tempora ipsa,
+              iste omnis corrupti voluptatum velit!
+            </p>
+          </div>
+          <div class="famous-idea">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              assumenda minus similique eligendi ipsam repellat, dolore
+              repudiandae illum fugiat tenetur deserunt nihil a tempora ipsa,
+              iste omnis corrupti voluptatum velit!
+            </p>
+          </div>
+          <div class="famous-idea">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo
+              assumenda minus similique eligendi ipsam repellat, dolore
+              repudiandae illum fugiat tenetur deserunt nihil a tempora ipsa,
+              iste omnis corrupti voluptatum velit!
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="all-idea">
+        <div class="child-idea">
+          <div class="like-button">
+            <button type="button" onClick="Add()">up</button>
+            <p id="clicks">0</p>
+
+            <button type="button" onClick="Substract()">down</button>
+          </div>
+          <p class="idea-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque amet
+            voluptatibus maxime assumenda inventore cum ipsum reprehenderit
+            mollitia harum, repudiandae nihil! Id, eos eligendi quos autem
+            aperiam facere dolor porro!
+          </p>
+        </div>
+        <div class="child-idea">
+          <div class="like-button">
+            <button type="button" onClick="Add()">up</button>
+            <p id="clickss">0</p>
+
+            <button type="button" onClick="Substract()">down</button>
+          </div>
+          <p class="idea-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque amet
+            voluptatibus maxime assumenda inventore cum ipsum reprehenderit
+            mollitia harum, repudiandae nihil! Id, eos eligendi quos autem
+            aperiam facere dolor porro!
+          </p>
+        </div>
+      </div>
+      <footer class="footer"></footer>
+    </div>
+  </body>
 </html>
