--- a/staff.html
+++ b/staff.html
@@ -5,7 +5,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/css/staff.css">
   </head>
   <link rel="stylesheet" href="staff.html" />
-  <body></body>
+  <body>
+    <header>
+      <div class="icon-and-search">
+        <img src="" alt="">
+        <div class="search">
+          <input type="text" placeholder="Search...">
+          <div class="icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+        </div>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Project</a></li>
+          <li><a href="">Job</a></li>
+          <li><a href="">Idea</a></li>
+        </ul>
+      </div>
+      <div class="profile">
+                  <img
+            class="avt-img"
+            src=""
+            alt=""
+          />
+          <div class="dropdown">
+            <!-- <h1 class="avt-name">Duong</h1> -->
+            <button
+              class="btn dropdown-toggle"
+              type="button"
+              data-toggle="dropdown"
+            >
+              Duong <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              <li>
+                <a
+                  href="http://127.0.0.1:5500/Login.html?username=asdasdasd&password=asdasd#"
+                  >Logout</a
+                >
+              </li>
+              <li><a href="#">login</a></li>
+              <li><a href="#">View </a></li>
+            </ul>
+          </div>
+      </div>
+    </header>
+    <section id="idea">
+      <div class="idea-left">
+        <div class="idea-short">
+          <div class="item-idea">
+            idea short 
+          </div>
+          <div class="item-idea">
+            idea short 
+          </div>
+          <div class="item-idea">
+            idea short 
+          </div>
+          <div class="item-idea">
+            idea short 
+          </div>
+          <div class="item-idea">
+            idea short 
+          </div>
+        </div>
+        <div class="idea-table">
+          <div class="idea-content">
+            <div class="idea-number">
+              <i class="fa-solid fa-caret-up"></i>
+              <span>1</span>
+              <i class="fa-solid fa-caret-down"></i>
+            </div>
+            <div class="idea-comment">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, expedita!</p>
+            </div>
+          </div>
+          <div class="idea-content">
+            <div class="idea-number">
+              <i class="fa-solid fa-caret-up"></i>
+              <span>1</span>
+              <i class="fa-solid fa-caret-down"></i>
+            </div>
+            <div class="idea-comment">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, expedita!</p>
+            </div>
+          </div>
+          <div class="idea-content">
+            <div class="idea-number">
+              <i class="fa-solid fa-caret-up"></i>
+              <span>1</span>
+              <i class="fa-solid fa-caret-down"></i>
+            </div>
+            <div class="idea-comment">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, expedita!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="idea-right">
+          Category
+      </div>
+    </section>
+  </body>
 </html>
